--- a/chapter_2_python refresher.ipynb
+++ b/chapter_2_python refresher.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -225,6 +225,186 @@
     "    print (\"Hi %s, you have completed %0.2f\"% (randomname, quantity) + ' percent of your work')\n",
     "if __name__ == '__main__':\n",
     "    main('Levi', 20.34674)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#importing packages and libraries\n",
+    "import sys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "darwin\n"
+     ]
+    }
+   ],
+   "source": [
+    "#I have a mac so the following output will be darwin\n",
+    "platform = sys.platform;\n",
+    "print (\"%s\" % platform)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python version: 2.7.13\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Checking the system version information\n",
+    "pyversion_major = sys.version_info[0];\n",
+    "pyversion_minor = sys.version_info[1];\n",
+    "pyversion_micro = sys.version_info [2];\n",
+    "print (\"Python version: %s.%s.%s\" % (pyversion_major, pyversion_minor, pyversion_micro))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "﻿This is a text file.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#First create a simple text file and save it in the same directory that the python code is written\n",
+    "#Once we have created a simple text file \n",
+    "import os\n",
+    "openFile = os.open('Untitled document.txt', os.O_RDONLY)\n",
+    "readmeText = os.read(openFile, 100)\n",
+    "print (readmeText)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#creating a file and writing on it\n",
+    "#first what we will write into the file\n",
+    "txtContent = \"Hi I am a text file\"\n",
+    "#Then opening the file where we will be writing \n",
+    "openFile = open('content.txt', 'w')\n",
+    "#then inserting the content we decided into the file\n",
+    "readmeText = openFile.write(txtContent)\n",
+    "#finally closing the file\n",
+    "openFile.close()\n",
+    "#once this is done, we can check for the actual file in the folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import PIL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from PIL import*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "from PIL import ImageDraw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def readcontent():\n",
+    "    openFile = open('content.txt', 'r')\n",
+    "    readmeText = openFile.read()\n",
+    "    openFile.close()\n",
+    "    return openFile, readmeText"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def generateImage():\n",
+    "    img = Image.new(\"RGBA\", (100, 80), \"white\")\n",
+    "    draw = ImageDraw.Draw(img)\n",
+    "    output = draw.text((10,10), readmeText, fill = (255,0,0,255))\n",
+    "    draw = ImageDraw.Draw(img)\n",
+    "    img.save(\"output.png\")\n",
+    "    return draw, img, output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "openFile, readmeText = readcontent()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "draw, img, output = generateImage()"
    ]
   },
   {
