--- a/Chapter 3.ipynb
+++ b/Chapter 3.ipynb
@@ -37,16 +37,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Stacked line charts\n",
+    "#These are similar to line charts, but have the ability to stack multiple\n",
+    "#sets of data over each other to show the specific values for a group\n",
+    "#let's start with stacked line charts\n",
+    "line = pygal.StackedLine (fill = True)\n",
+    "line.title = \"Shows watched in the past ten years\"\n",
+    "line.x_labels = map (str, range (2007, 2017))\n",
+    "line.add (\"Game of Thrones\", [None, 0, 12, 32, 40, 50, 72, 148])\n",
+    "line.add (\"Nurse Jackie\", [2, 16, 12, 87, 30, 55, 20, 38])\n",
+    "line.add (\"Boardwalk\", [10, 15, 40, 60, 30, 56, 60, 100])\n",
+    "line.render_to_file ('stackedline.svg')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Stacked line charts\n",
-    "#These are similar to line charts, but have the ability to stack multiple\n",
-    "#sets of data over each other to show the specific values for a group\n"
+    "#let's do another identical chart where fill = False\n",
+    "line = pygal.StackedLine (fill = False)\n",
+    "line.title = \"Shows watched in the past ten years\"\n",
+    "line.x_labels = map (str, range (2007, 2017))\n",
+    "line.add (\"Game of Thrones\", [None, 0, 12, 32, 40, 50, 72, 148])\n",
+    "line.add (\"Nurse Jackie\", [2, 16, 12, 87, 30, 55, 20, 38])\n",
+    "line.add (\"Boardwalk\", [10, 15, 40, 60, 30, 56, 60, 100])\n",
+    "line.render_to_file ('stackedline1.svg')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
