--- a/Chapter 3.ipynb
+++ b/Chapter 3.ipynb
@@ -369,6 +369,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Additional charts (included in chapter 4 in your book)\n",
+    "pie_chart = pygal.Pie()\n",
+    "pie_chart.title = 'Race and Ethnicity (in %)'\n",
+    "pie_chart.add('White', 22.5)\n",
+    "pie_chart.add('African Americans', 19.6)\n",
+    "pie_chart.add('Asians', 16.3)\n",
+    "pie_chart.add('Hispanics', 14.5)\n",
+    "pie_chart.add('Native Americans', 2.3)\n",
+    "pie_chart.render_to_file ('pie_chart.svg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Donut chart\n",
+    "pie_chart = pygal.Pie(inner_radius=.5)\n",
+    "pie_chart.title = 'Race and Ethnicity (in %)'\n",
+    "pie_chart.add('White', 22.5)\n",
+    "pie_chart.add('African Americans', 19.6)\n",
+    "pie_chart.add('Asians', 16.3)\n",
+    "pie_chart.add('Hispanics', 14.5)\n",
+    "pie_chart.add('Native Americans', 2.3)\n",
+    "pie_chart.render_to_file ('pie_chart_donut.svg')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
